Fix top-bar navbar collapse.

--- a/app/webroot/css/modern/app.css
+++ b/app/webroot/css/modern/app.css
@@ -12559,6 +12559,10 @@ a.text-light-blue:focus {
 }
 
 .top-bar {
+  padding: 0;
+}
+
+.top-bar .navbar-collapse {
   background: #4dc310;
   color: #fff;
   text-align: center;
